--- a/blog.html
+++ b/blog.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilos.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/estilos.css" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Vamos a realizar un blog post</h1>
-    <p>Este es el parrafo de inicio</p>
-    
-</body>
+  </head>
+  <body>
+    <div id="container">
+      <div id="post">
+        <h1>Vamos a realizar un blog post</h1>
+        <p>Este es el parrafo de inicio que nos va a servir para ver los cambios en git</p>
+      </div>
+    </div>
+  </body>
 </html>
