Primeros cambios en la cabecera de mi proyecto

--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
       <div id="post">
         <h1>Vamos a realizar un blog post</h1>
         <p>Este es el parrafo de inicio que nos va a servir para ver los cambios en git</p>
