Commit de la cabecera listo para el merge

--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
   <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            Cabecera aqui estamos haciendo una cabecera con todos sus estilos muy lindos la verdad aqui veremos si se fusiona la cabecera
         </div>
       <div id="post">
         <h1>Vamos a realizar un blog post</h1>
