Commit del contenido

--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,7 @@
       <div id="post">
         <h1>Vamos a realizar un blog post</h1>
         <p>Este es el parrafo de inicio que nos va a servir para ver los cambios en git</p>
+        <p>parrafoooo buenoooo este eees master</p>
       </div>
     </div>
   </body>
