--- a/blog.html
+++ b/blog.html
@@ -16,6 +16,7 @@
         <h1>Vamos a realizar un blog post</h1>
         <p>Este es el parrafo de inicio que nos va a servir para ver los cambios en git</p>
         <p>Ahora este es un parrafo adicional para la prueba del merge</p>
+        <p>pruebaaaaaaaaaaaaaaaaaa cabeceraaaaaa</p>
       </div>
     </div>
   </body>
