--- a/blog.html
+++ b/blog.html
@@ -10,8 +10,7 @@
   <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera aqui estamos haciendo una cabecera con todos sus estilos muy lindos la verdad aqui veremos si se fusiona la cabecera
-        </div>
+           Cebecera de cabecera
       <div id="post">
         <h1>Vamos a realizar un blog post</h1>
         <p>Este es el parrafo de inicio que nos va a servir para ver los cambios en git</p>
