Cambio cabecera tff

--- a/blog.html
+++ b/blog.html
@@ -10,11 +10,8 @@
   <body>
     <div id="container">
         <div id="cabecera">
-<<<<<<< HEAD
-            Cabecera master
-=======
-           Cebecera de cabecera
->>>>>>> cabecera
+            Cabecera
+        </div>
       <div id="post">
         <h1>Vamos a realizar un blog post</h1>
         <p>Este es el parrafo de inicio que nos va a servir para ver los cambios en git</p>
