Commit de cabecera

--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
   <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            Cabecera de master piece
         </div>
       <div id="post">
         <h1>Vamos a realizar un blog post</h1>
