--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="cabecera">
             Cabecera de master piece
-            Mi nombre es Juan
+            Mi nombre es Juan Pedro Gonzalez
         </div>
       <div id="post">
         <h1>Vamos a realizar un blog post</h1>
