Cambios en el encabezado con simio

--- a/blog.html
+++ b/blog.html
@@ -10,8 +10,9 @@
   <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera de master piece
-            Mi nombre es Juan Pedro Gonzalez
+            <img src="/imagenes/simio.jpg" alt="simio" class="imgsimio">
+            <p>de master piece
+              Mi nombre es Juan Pedro Gonzalez</p> 
         </div>
       <div id="post">
         <h1>Vamos a realizar un blog post</h1>
