--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,8 @@
   <body>
     <div id="container">
         <div id="cabecera">
-            <img src="/imagenes/simio.jpg" alt="simio" class="imgsimio">
+            <img src="/imagenes/orangutan.jpg" alt="simio" class="imgsimio">
+            <img src="/imagenes/simio.jpeg" alt="">
             <p>de master piece
               Mi nombre es Juan Pedro Gonzalez</p> 
         </div>
