Cambio al titulo
Del blog

--- a/blog.html
+++ b/blog.html
@@ -12,8 +12,7 @@
         <div id="cabecera">
             <img src="imagenes/orangutan.jpg" alt="simio" class="imgsimio">
          
-            <p>de master piece
-              Mi nombre es Juan Pedro Gonzalez</p> 
+            <p>Blog Perfecto          Mi nombre es Juan Pedro Gonzalez</p> 
         </div>
       <div id="post">
         <h1>Vamos a realizar un blog post</h1>
