--- a/blog.html
+++ b/blog.html
@@ -26,6 +26,8 @@
           Why do we use it?
           
         </p>
+
+        <img src="imagenes/changuitos.jpg" alt="changuitos">
       </div>
     </div>
   </body>
