--- a/blog.html
+++ b/blog.html
@@ -37,6 +37,8 @@
         
         <img src="imagenes/changuitos.jpg" alt="changuitos">
         <p>algo mas</p>
+
+        <p>Hola experimento 1</p>
       </div>
     </div>
   </body>
