--- a/blog.html
+++ b/blog.html
@@ -39,6 +39,7 @@
         <p>algo mas</p>
 
         <p>Hola experimento 1</p>
+        <p>Hola experimento 2</p>
       </div>
     </div>
   </body>
