--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,7 @@
         </p>
 
         <img src="imagenes/changuitos.jpg" alt="changuitos">
+        <p>algo mas</p>
       </div>
     </div>
   </body>
